--- a/otro index.html
+++ b/otro index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shermantapiero</title>
+    <title>shermantapieron</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
         <section class="main-content">
             <div>
                 <h2>Crédito Hipotecario: El hogar de tus sueños al alcance</h2>
+                <img src="img/credito_hipotecario.png" alt="Familia feliz en casa">
                 <p>Haz realidad el sueño de tener vivienda propia con nuestras flexibles opciones de crédito hipotecario. Te ofrecemos las mejores tasas y plazos adaptados a tus necesidades. ¡Aprobación rápida y sencilla!</p>
                 <p><a href="credito_hipotecario_mas_info.html">Profundizar sobre Crédito Hipotecario</a></p>
             </div>
