--- a/banco/otro index.html
+++ b/banco/otro index.html
@@ -26,7 +26,7 @@
         <section class="main-content">
             <div>
                 <h2>Crédito Hipotecario: El hogar de tus sueños al alcance</h2>
-                <img src="img/credito_hipotecario.png" alt="Familia feliz en casa">
+                <img src="img/logo" alt="Familia feliz en casa">
                 <p>Haz realidad el sueño de tener vivienda propia con nuestras flexibles opciones de crédito hipotecario. Te ofrecemos las mejores tasas y plazos adaptados a tus necesidades. ¡Aprobación rápida y sencilla!</p>
                 <p><a href="credito_hipotecario_mas_info.html">Profundizar sobre Crédito Hipotecario</a></p>
             </div>
