--- a/banco/creditos.html
+++ b/banco/creditos.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styke.css">
+    <link rel="stylesheet" href="styke">
 </head>
 <body>
-    <div style="margin-top: 40px;">
+    <div>
   <h2>Crédito de Libre Inversión: Usa el dinero como quieras</h2>
   <img src="ruta/de/imagen-libre-inversion.jpg" alt="Persona feliz con dinero" style="width: 100px; margin-top: 10px;">
   <p>
