--- a/banco/creditos.html
+++ b/banco/creditos.html
@@ -14,7 +14,7 @@
     Obtén el dinero que necesitas para lo que tú elijas: estudios, viajes, imprevistos o cualquier proyecto personal.
     Te ofrecemos tasas competitivas, plazos cómodos y aprobación rápida. ¡Tú decides cómo usarlo!
   </p>
-  <a href="#" style="color: blue; text-decoration: underline;">Profundizar sobre Crédito de Libre Inversión</a>
+  <a>Profundizar sobre Crédito de Libre Inversión</a>
 </div>
 
 </body>
